# libdce

./: .gitignore  Android.mk  Makefile  Makefile.am  Makefile.qnx  README  README.txt  common.mk  configure.ac  dce_priv.h  dce_rpc.h  libdce.c  libdce.h  libdce.pc.in  libdce_android.c  libdce_linux.c  memplugin.h  memplugin_android.c  memplugin_linux.c  memplugin_qnx.c
linux/: libdce-x11.c  wayland-drm-client-protocol.h  wayland-drm-protocol.c
nto/: README.txt  qconf-override.mk
test_qnx/: Makefile  common.mk  dce_test.c  dce_test.use
test_qnx/dce_enc_test/: Makefile  common.mk  dce_enc_test.c  dce_enc_test.use
test_qnx/dce_test/: Makefile  common.mk  dce_test.c  dce_test.use
